MySQL rework Done Config rework "working" Game work ongoing